# cadeqs

./: README.md  pyproject.toml
baselines/: README.md
baselines/llm/: infer.py  prompt_templates.py  train.py
baselines/monr/: infer.py  train.py
baselines/t5/: infer.py  train.py
cadeqs/: infer.py  model.py  prune.py  train.py  util.py
data/: preprocess.py
evaluation/: evaluate.py  metrics.py
evaluation/bs_baselines/: deberta-large_baseline.tsv  deberta-v2-large-japanese_baseline.tsv
